[gd_scene load_steps=3 format=3 uid="uid://dnsiswcs0227u"]

[ext_resource type="Script" path="res://testPlayer.gd" id="1_cdm8n"]
[ext_resource type="PackedScene" uid="uid://b58ahyrtukuf5" path="res://test_save_load_screen.tscn" id="2_axwv2"]

[node name="Player" type="Area2D"]
script = ExtResource("1_cdm8n")

[node name="TestSaveLoadScreen" parent="." instance=ExtResource("2_axwv2")]

[connection signal="LoadGamePressed" from="TestSaveLoadScreen" to="." method="_on_test_save_load_screen_load_game_pressed"]
[connection signal="SaveGamePressed" from="TestSaveLoadScreen" to="." method="_on_test_save_load_screen_save_game_pressed"]
